// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating Counter should render correctly when align is right 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    color: #F8B546;
  }
  .label-0-2-22 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-23 {
    font-size: 14px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: row;
    align-items: center;
  }
  .container-d0-0-2-3 > label {
    order: 1;
  }
  .rating-d1-0-2-4 {
    order: 2;
  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              disabled=""
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-22 label-d0-0-2-23"
      >
        Placeholder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Counter should render correctly with given props 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    color: #F8B546;
  }
  .label-0-2-22 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-23 {
    font-size: 14px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: row;
    align-items: center;
  }
  .container-d0-0-2-3 > label {
    order: 2;
  }
  .rating-d1-0-2-4 {
    order: 2;
  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              disabled=""
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-22 label-d0-0-2-23"
      >
        Placeholder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Input should change to active a rating star with mouseEnter 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {
    background-color: #000000;
  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {
    background-color: #000000;
  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {
    background-color: #000000;
  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    cursor: pointer;
    color: #777777;
  }
  .label-0-2-50 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-51 {
    font-size: 12px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: column;
  }
  .container-d0-0-2-3 > label {
    margin-top: 4px;
    order: 1;
  }
  .rating-d1-0-2-4 {  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              data-testid="rating-1"
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              data-testid="rating-1"
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              data-testid="rating-1"
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              data-testid="rating-1"
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              data-testid="rating-1"
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-50 label-d0-0-2-51"
      >
        Placeholder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Input should render correctly when is disabled 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    color: #777777;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    color: #777777;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    color: #777777;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    color: #777777;
  }
  .label-0-2-50 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-51 {
    font-size: 12px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: column;
  }
  .container-d0-0-2-3 > label {
    margin-top: 4px;
    order: 1;
  }
  .rating-d1-0-2-4 {  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              disabled=""
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              disabled=""
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              disabled=""
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              disabled=""
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              disabled=""
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-50 label-d0-0-2-51"
      >
        Placeholder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Input should render correctly with given props 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {
    background-color: #000000;
  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {
    background-color: #000000;
  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {
    background-color: #000000;
  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    cursor: pointer;
    color: #777777;
  }
  .label-0-2-50 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-51 {
    font-size: 12px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: column;
  }
  .container-d0-0-2-3 > label {
    margin-top: 4px;
    order: 1;
  }
  .rating-d1-0-2-4 {  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-50 label-d0-0-2-51"
      >
        Placeholder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Input should render correctly with label 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {
    background-color: #000000;
  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {
    background-color: #000000;
  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {
    background-color: #000000;
  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    cursor: pointer;
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    cursor: pointer;
    color: #777777;
  }
  .label-0-2-50 {
    font-family: Roboto, sans-serif;
    letter-spacing: 0.22px;
  }
  .label-d0-0-2-51 {
    font-size: 12px;
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: column;
  }
  .container-d0-0-2-3 > label {
    margin-top: 4px;
    order: 1;
  }
  .rating-d1-0-2-4 {  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-outlined-action-rating"
                data-testid="icon-outlined-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
      <label
        class="label-0-2-50 label-d0-0-2-51"
      >
        Placebolder
      </label>
    </div>
  </div>,
]
`;

exports[`Rating Read-Only should render correctly with given props 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    color: #777777;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    color: #777777;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    color: #777777;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: row;
  }
  .container-d0-0-2-3 > label {
    order: 2;
  }
  .rating-d1-0-2-4 {
    order: 2;
  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              disabled=""
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              disabled=""
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              disabled=""
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              disabled=""
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              disabled=""
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Rating Read-Only should render correctly with rate equal 3 1`] = `
Array [
  ".icon-0-2-20 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-21 {
  color: #000000;
  font-size: 32px;
}
.icon-d1-0-2-28 {
  color: #000000;
  font-size: 32px;
}
.icon-d2-0-2-35 {
  color: #000000;
  font-size: 32px;
}
.icon-d3-0-2-42 {
  color: #000000;
  font-size: 32px;
}
.icon-d4-0-2-49 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-10 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-11:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-11:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-12 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-13 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-14 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-15 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-16 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-16:focus:after {  }
  .wrapper-d0-0-2-16:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-17 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-18 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-19 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d4-0-2-24 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d4-0-2-24:focus:after {  }
  .wrapper-d4-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-27 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d8-0-2-31 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d8-0-2-31:focus:after {  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d9-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d12-0-2-38 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d12-0-2-38:focus:after {  }
  .wrapper-d12-0-2-38:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d13-0-2-39 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d14-0-2-40 {
    overflow: hidden;
  }
  .rippleActive-d15-0-2-41 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .wrapper-d16-0-2-45 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d16-0-2-45:focus:after {  }
  .wrapper-d16-0-2-45:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d17-0-2-46 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d18-0-2-47 {
    overflow: hidden;
  }
  .rippleActive-d19-0-2-48 {
    animation: keyframes-ripple-0-2-15 300ms;
  }
  .base-0-2-8 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-8:disabled {
    cursor: default;
  }
  .base-d0-0-2-9 {
    height: 32px;
    width: 32px;
  }
  .base-d1-0-2-23 {
    height: 32px;
    width: 32px;
  }
  .base-d2-0-2-30 {
    height: 32px;
    width: 32px;
  }
  .base-d3-0-2-37 {
    height: 32px;
    width: 32px;
  }
  .base-d4-0-2-44 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-5 {
    display: flex;
  }
  .ratingIcon-0-2-6 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-6:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-6:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-6:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-6 > i {  }
  .ratingIcon-d0-0-2-7 {  }
  .ratingIcon-d0-0-2-7 > i {
    color: #F8B546;
  }
  .ratingIcon-d1-0-2-22 {  }
  .ratingIcon-d1-0-2-22 > i {
    color: #F8B546;
  }
  .ratingIcon-d2-0-2-29 {  }
  .ratingIcon-d2-0-2-29 > i {
    color: #F8B546;
  }
  .ratingIcon-d3-0-2-36 {  }
  .ratingIcon-d3-0-2-36 > i {
    color: #777777;
  }
  .ratingIcon-d4-0-2-43 {  }
  .ratingIcon-d4-0-2-43 > i {
    color: #777777;
  }
  .container-0-2-1 {
    display: flex;
  }
  .container-0-2-1 > label {  }
  .rating-0-2-2 {
    display: flex;
  }
  .container-d0-0-2-3 {
    flex-direction: row;
  }
  .container-d0-0-2-3 > label {
    order: 2;
  }
  .rating-d1-0-2-4 {
    order: 2;
  }",
  <div>
    <div
      class="container-0-2-1 container-d0-0-2-3"
    >
      <div
        class="rating-0-2-2 rating-d1-0-2-4"
      >
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d0-0-2-16"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d2-0-2-18"
            >
              <div
                class="ripple-0-2-12 ripple-d1-0-2-17 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d0-0-2-9 ratingIcon-0-2-6 ratingIcon-d0-0-2-7"
              disabled=""
              type="button"
              value="1"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d0-0-2-21 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d4-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d6-0-2-26"
            >
              <div
                class="ripple-0-2-12 ripple-d5-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d1-0-2-23 ratingIcon-0-2-6 ratingIcon-d1-0-2-22"
              disabled=""
              type="button"
              value="2"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d1-0-2-28 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-12 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d2-0-2-30 ratingIcon-0-2-6 ratingIcon-d2-0-2-29"
              disabled=""
              type="button"
              value="3"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d2-0-2-35 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d12-0-2-38"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d14-0-2-40"
            >
              <div
                class="ripple-0-2-12 ripple-d13-0-2-39 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d3-0-2-37 ratingIcon-0-2-6 ratingIcon-d3-0-2-36"
              disabled=""
              type="button"
              value="4"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d3-0-2-42 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
        <div
          class="ratingContainer-0-2-5"
        >
          <div
            class="wrapper-0-2-11 wrapper-d16-0-2-45"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-13 rippleContainer-d18-0-2-47"
            >
              <div
                class="ripple-0-2-12 ripple-d17-0-2-46 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              aria-label=""
              class="base-0-2-8 base-d4-0-2-44 ratingIcon-0-2-6 ratingIcon-d4-0-2-43"
              disabled=""
              type="button"
              value="5"
            >
              <i
                aria-hidden="true"
                arial-label=""
                class="icon-0-2-20 icon-d4-0-2-49 natds-icons natds-icons-filled-action-rating"
                data-testid="icon-filled-action-rating"
                role="button"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`RatingBase Component should render correctly when is disabled 1`] = `
Array [
  ".icon-0-2-16 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-17 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-6 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-7:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-8 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-9 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-10 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-11 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-12 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-12:focus:after {  }
  .wrapper-d0-0-2-12:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-13 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-14 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-15 {
    animation: keyframes-ripple-0-2-11 300ms;
  }
  .base-0-2-4 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-4:disabled {
    cursor: default;
  }
  .base-d0-0-2-5 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-1 {
    display: flex;
  }
  .ratingIcon-0-2-2 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-2:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-2:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-2:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-2 > i {  }
  .ratingIcon-d0-0-2-3 {  }
  .ratingIcon-d0-0-2-3 > i {
    color: #777777;
  }",
  <div>
    <div
      class="ratingContainer-0-2-1"
    >
      <div
        class="wrapper-0-2-7 wrapper-d0-0-2-12"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-9 rippleContainer-d2-0-2-14"
        >
          <div
            class="ripple-0-2-8 ripple-d1-0-2-13 "
            data-testid="ripple-animation"
          />
        </div>
        <button
          aria-label="rating"
          class="base-0-2-4 base-d0-0-2-5 ratingIcon-0-2-2 ratingIcon-d0-0-2-3"
          disabled=""
          type="button"
        >
          <i
            aria-hidden="true"
            arial-label="rating"
            class="icon-0-2-16 icon-d0-0-2-17 natds-icons natds-icons-filled-action-rating"
            data-testid="icon-filled-action-rating"
            role="button"
          />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`RatingBase Component should render correctly when is not filled 1`] = `
Array [
  ".icon-0-2-16 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-17 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-6 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-7:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-8 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-9 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-10 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-11 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-12 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-12:focus:after {  }
  .wrapper-d0-0-2-12:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-13 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-14 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-15 {
    animation: keyframes-ripple-0-2-11 300ms;
  }
  .base-0-2-4 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-4:disabled {
    cursor: default;
  }
  .base-d0-0-2-5 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-1 {
    display: flex;
  }
  .ratingIcon-0-2-2 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-2:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-2:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-2:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-2 > i {  }
  .ratingIcon-d0-0-2-3 {  }
  .ratingIcon-d0-0-2-3 > i {
    color: #777777;
  }",
  <div>
    <div
      class="ratingContainer-0-2-1"
    >
      <div
        class="wrapper-0-2-7 wrapper-d0-0-2-12"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-9 rippleContainer-d2-0-2-14"
        >
          <div
            class="ripple-0-2-8 ripple-d1-0-2-13 "
            data-testid="ripple-animation"
          />
        </div>
        <button
          aria-label="rating"
          class="base-0-2-4 base-d0-0-2-5 ratingIcon-0-2-2 ratingIcon-d0-0-2-3"
          disabled=""
          type="button"
        >
          <i
            aria-hidden="true"
            arial-label="rating"
            class="icon-0-2-16 icon-d0-0-2-17 natds-icons natds-icons-outlined-action-rating"
            data-testid="icon-outlined-action-rating"
            role="button"
          />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`RatingBase Component should render correctly with default props 1`] = `
Array [
  ".icon-0-2-16 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-17 {
  color: #000000;
  font-size: 32px;
}
.sharedRippleEffect-0-2-6 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-7:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-7:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-8 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-9 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-10 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-11 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-12 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-12:focus:after {  }
  .wrapper-d0-0-2-12:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-13 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-14 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-15 {
    animation: keyframes-ripple-0-2-11 300ms;
  }
  .base-0-2-4 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-4:disabled {
    cursor: default;
  }
  .base-d0-0-2-5 {
    height: 32px;
    width: 32px;
  }
  .ratingContainer-0-2-1 {
    display: flex;
  }
  .ratingIcon-0-2-2 {
    position: relative;
    background-color: transparent;
  }
  .ratingIcon-0-2-2:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    border-radius: 50%;
    background-color: #000000;
  }
  .ratingIcon-0-2-2:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .ratingIcon-0-2-2:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .ratingIcon-0-2-2 > i {  }
  .ratingIcon-d0-0-2-3 {  }
  .ratingIcon-d0-0-2-3 > i {
    color: #F8B546;
  }",
  <div>
    <div
      class="ratingContainer-0-2-1"
    >
      <div
        class="wrapper-0-2-7 wrapper-d0-0-2-12"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-9 rippleContainer-d2-0-2-14"
        >
          <div
            class="ripple-0-2-8 ripple-d1-0-2-13 "
            data-testid="ripple-animation"
          />
        </div>
        <button
          aria-label="rating"
          class="base-0-2-4 base-d0-0-2-5 ratingIcon-0-2-2 ratingIcon-d0-0-2-3"
          disabled=""
          type="button"
        >
          <i
            aria-hidden="true"
            arial-label="rating"
            class="icon-0-2-16 icon-d0-0-2-17 natds-icons natds-icons-filled-action-rating"
            data-testid="icon-filled-action-rating"
            role="button"
          />
        </button>
      </div>
    </div>
  </div>,
]
`;
